/*
Copyright 2022 The Dapr Authors
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package dapr.proto.components.v1;

option csharp_namespace = "Dapr.Client.Autogen.Grpc.v1";
option java_outer_classname = "ComponentProtos";
option java_package = "io.dapr.v1";
option go_package = "github.com/dapr/dapr/pkg/proto/components/v1;components";

// Base metadata request for all components
message MetadataRequest {
  map<string, string> properties = 1;
}

// reserved for future-proof extensibility
message FeaturesRequest {}

message FeaturesResponse {
  repeated string features = 1;
}

// reserved for future-proof extensibility
message PingRequest {}

// reserved for future-proof extensibility
message PingResponse {}